// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Creater {
  rpc SayCreate (CreateRequest) returns (CreateReply) {}
}

service Reader {
  rpc SayRead (ReadRequest) returns (ReadReply) {}
}

service Atualizar {
  rpc SayAtualiza (AtualizaRequest) returns (AtualizaReply) {}
}

service Deletar {
  rpc SayDeleta (DeletaRequest) returns (DeletaReply) {}
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message CreateRequest {
  int64 chave = 1;
  int64 timeStamp = 2;
  string dados = 3;
}

message CreateReply {
  string message = 1;
}

message ReadRequest {
  int64 chave = 1;
}

message ReadReply {
  string message = 1;
}

message AtualizaRequest {
  int64 chave = 1;
  int64 versao = 2;
  int64 timeStamp = 3;
  string dados = 4;
}

message AtualizaReply {
  string message = 1;
}

message DeletaRequest {
  int64 chave = 1;
}

message DeletaReply {
  string message = 1;
}
